# serializer version: 1
# name: test_array_literal_ok[literal_array_empty]
  '''
  SELECT []
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
  '''
# ---
# name: test_array_literal_ok[literal_array_multi]
  '''
  SELECT [1,2,3]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix]
  '''
  SELECT ARRAY [1,2,3]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_prefix
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_compound_type]
  '''
  SELECT ARRAY<STRUCT<a INT64>>[STRUCT(1)]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  struct_type
                    struct_type_list
                      struct_field
                        ident	a
                        type
                          type_name	INT64
            array_literal_item_list
              named_struct_literal
                named_struct_literal_prefix
                named_struct_literal_item_list
                  named_struct_literal_item
                    integer_literal	1
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_nested_compound_type]
  '''
  SELECT ARRAY<STRUCT<a STRUCT<b INT64>>>[STRUCT(STRUCT(1))]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  struct_type
                    struct_type_list
                      struct_field
                        ident	a
                        type
                          struct_type
                            struct_type_list
                              struct_field
                                ident	b
                                type
                                  type_name	INT64
            array_literal_item_list
              named_struct_literal
                named_struct_literal_prefix
                named_struct_literal_item_list
                  named_struct_literal_item
                    named_struct_literal
                      named_struct_literal_prefix
                      named_struct_literal_item_list
                        named_struct_literal_item
                          integer_literal	1
  '''
# ---
# name: test_array_literal_ok[literal_array_prefix_scalar_type]
  '''
  SELECT ARRAY<INT64>[1,2,3]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_prefix
              array_type
                type
                  type_name	INT64
            array_literal_item_list
              integer_literal	1
              integer_literal	2
              integer_literal	3
  '''
# ---
# name: test_array_literal_ok[literal_array_single]
  '''
  SELECT [1]
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          array_literal
            array_literal_item_list
              integer_literal	1
  '''
# ---
# name: test_bignumeric_literal_ok[literal_bignumeric]
  '''
  SELECT BIGNUMERIC '42'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bignumeric_literal	'42'
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_empty]
  '''
  SELECT b""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b"")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_nonempty]
  '''
  SELECT b"bytes"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b"bytes"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b"bytes")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_cap]
  '''
  SELECT BR"bytes"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	BR"bytes"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(BR"bytes")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_empty]
  '''
  SELECT br""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br"")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_dquot_raw_nonempty]
  '''
  SELECT rb"bytes"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	rb"bytes"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(rb"bytes")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_empty]
  '''
  SELECT b''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b'')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_nonempty]
  '''
  SELECT b'bytes'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b'bytes'
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b'bytes')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_empty]
  '''
  SELECT br''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br'')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_squot_raw_nonempty]
  '''
  SELECT br'bytes'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br'bytes'
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br'bytes')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_empty]
  '''
  SELECT b""""""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b""""""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b"""""")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_nonempty]
  '''
  SELECT b"""We say: "hello"."""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b"""We say: "hello"."""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b"""We say: "hello".""")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_empty]
  '''
  SELECT br""""""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br""""""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br"""""")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tdquot_raw_nonempty]
  '''
  SELECT br"""We say: "hello"."""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br"""We say: "hello"."""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br"""We say: "hello".""")
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_empty]
  '''
  SELECT b''''''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b''''''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b'''''')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_nonempty]
  '''
  SELECT b'''We say: 'hello'.'''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	b'''We say: 'hello'.'''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(b'''We say: 'hello'.''')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_empty]
  '''
  SELECT br''''''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br''''''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br'''''')
  '''
# ---
# name: test_bytes_literal_ok[literal_bytes_tsquot_raw_nonempty]
  '''
  SELECT br'''We say: 'hello'.'''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          bytes_literal	br'''We say: 'hello'.'''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          BytesLiteral(br'''We say: 'hello'.''')
  '''
# ---
# name: test_date_time_literal_ok[literal_date]
  '''
  SELECT DATE '1970-01-01'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          date_literal	'1970-01-01'
  '''
# ---
# name: test_date_time_literal_ok[literal_datetime]
  '''
  SELECT DATETIME '1970-01-01 12:00:00.01'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          datetime_literal	'1970-01-01 12:00:00.01'
  '''
# ---
# name: test_date_time_literal_ok[literal_time]
  '''
  SELECT DATE '12:00:00.01'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          date_literal	'12:00:00.01'
  '''
# ---
# name: test_date_time_literal_ok[literal_timestamp]
  '''
  SELECT TIMESTAMP '1970-01-01 12:00:00.01-08'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          timestamp_literal	'1970-01-01 12:00:00.01-08'
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot]
  '''
  SELECT 58.
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          float_literal	58.
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_dot_dig_lower_e_minus_dig]
  '''
  SELECT 123.456e-67
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          float_literal	123.456e-67
  '''
# ---
# name: test_float_literal_ok[literal_float_dig_lower_e_dig]
  '''
  SELECT 4e2
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          float_literal	4e2
  '''
# ---
# name: test_float_literal_ok[literal_float_dot_dig_cap_e_dig]
  '''
  SELECT .1E4
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          float_literal	.1E4
  '''
# ---
# name: test_integer_literal_ok[literal_integer_decimal]
  '''
  SELECT 1
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	1
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          IntegerLiteral(1)
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex]
  '''
  SELECT 0xff
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	0xff
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          IntegerLiteral(0xff)
  '''
# ---
# name: test_integer_literal_ok[literal_integer_hex_cap]
  '''
  SELECT 0XFF
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	0XFF
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          IntegerLiteral(0XFF)
  '''
# ---
# name: test_integer_literal_ok[literal_integer_quoted_alias_adjacent]
  '''
  SELECT 1`alias`
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          integer_literal	1
          as_alias
            ident	`alias`
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          IntegerLiteral(1)
          Alias
            Ident(`alias`)
  '''
# ---
# name: test_json_literal_ok[literal_json]
  '''
  SELECT JSON '{}'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          json_literal	'{}'
  '''
# ---
# name: test_numeric_literal_ok[literal_numeric]
  '''
  SELECT NUMERIC '42'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          numeric_literal	'42'
  '''
# ---
# name: test_range_literal_ok[literal_range]
  '''
  SELECT RANGE<DATE> '[1970-01-01, 1970-01-02)'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          range_literal
            range_type
              type
                type_name	DATE
            range_value	'[1970-01-01, 1970-01-02)'
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_empty]
  '''
  SELECT ""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral("")
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_nonempty]
  '''
  SELECT "string"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	"string"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral("string")
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_cap]
  '''
  SELECT R"string"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	R"string"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(R"string")
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_empty]
  '''
  SELECT r""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r"")
  '''
# ---
# name: test_string_literal_ok[literal_string_dquot_raw_nonempty]
  '''
  SELECT r"string"
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r"string"
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r"string")
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_empty]
  '''
  SELECT ''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral('')
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_nonempty]
  '''
  SELECT 'string'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	'string'
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral('string')
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_empty]
  '''
  SELECT r''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r'')
  '''
# ---
# name: test_string_literal_ok[literal_string_squot_raw_nonempty]
  '''
  SELECT r'string'
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r'string'
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r'string')
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_empty]
  '''
  SELECT """"""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	""""""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral("""""")
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_nonempty]
  '''
  SELECT """We say: "hello"."""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	"""We say: "hello"."""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral("""We say: "hello".""")
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_empty]
  '''
  SELECT r""""""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r""""""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r"""""")
  '''
# ---
# name: test_string_literal_ok[literal_string_tdquot_raw_nonempty]
  '''
  SELECT r"""We say: "hello"."""
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r"""We say: "hello"."""
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r"""We say: "hello".""")
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_empty]
  '''
  SELECT ''''''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	''''''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral('''''')
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_nonempty]
  '''
  SELECT '''We say: 'hello'.'''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	'''We say: 'hello'.'''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral('''We say: 'hello'.''')
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_empty]
  '''
  SELECT r''''''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r''''''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r'''''')
  '''
# ---
# name: test_string_literal_ok[literal_string_tsquot_raw_nonempty]
  '''
  SELECT r'''We say: 'hello'.'''
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          string_literal	r'''We say: 'hello'.'''
  
  Query
    Select(distinct=False)
      SelectList
        SelectColumn
          StringLiteral(r'''We say: 'hello'.''')
  '''
# ---
# name: test_struct_literal_ok[literal_struct]
  '''
  SELECT (1, 2)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          struct_literal
            integer_literal	1
            integer_literal	2
  '''
# ---
# name: test_struct_literal_ok[literal_struct_multi]
  '''
  SELECT (1, 2, 3)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          struct_literal
            integer_literal	1
            integer_literal	2
            integer_literal	3
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named]
  '''
  SELECT STRUCT(1, 2, 3)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_alias]
  '''
  SELECT STRUCT(1 AS a, 2 AS b, 3 AS c)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
                as_alias
                  ident	a
              named_struct_literal_item
                integer_literal	2
                as_alias
                  ident	b
              named_struct_literal_item
                integer_literal	3
                as_alias
                  ident	c
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl]
  '''
  SELECT STRUCT<INT64, INT64, INT64>(1, 2, 3)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    type
                      type_name	INT64
                  struct_field
                    type
                      type_name	INT64
                  struct_field
                    type
                      type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_column]
  '''
  SELECT STRUCT<a INT64, b INT64, c INT64>(1, 2, 3)
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    ident	a
                    type
                      type_name	INT64
                  struct_field
                    ident	b
                    type
                      type_name	INT64
                  struct_field
                    ident	c
                    type
                      type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                integer_literal	2
              named_struct_literal_item
                integer_literal	3
  '''
# ---
# name: test_struct_literal_ok[literal_struct_named_compound_type_decl_nested]
  '''
  SELECT STRUCT<a INT64, STRUCT<b INT64, c INT64>>(1, STRUCT(2, 3))
  
  query_expr
    select
      select_metadata
      select_list
        select_expr
          named_struct_literal
            named_struct_literal_prefix
              struct_type
                struct_type_list
                  struct_field
                    ident	a
                    type
                      type_name	INT64
                  struct_field
                    type
                      struct_type
                        struct_type_list
                          struct_field
                            ident	b
                            type
                              type_name	INT64
                          struct_field
                            ident	c
                            type
                              type_name	INT64
            named_struct_literal_item_list
              named_struct_literal_item
                integer_literal	1
              named_struct_literal_item
                named_struct_literal
                  named_struct_literal_prefix
                  named_struct_literal_item_list
                    named_struct_literal_item
                      integer_literal	2
                    named_struct_literal_item
                      integer_literal	3
  '''
# ---
